# diffusion2d

./: README.md  pyproject.toml
diffusion2d/: diffusion2d.py  output.py  test.py
