[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "enoghadd_diffusion2d"
version = "0.0.1"
authors = [
    {name = "David Enoghama", email = "st172309@stud.uni-stuttgart.de"},
]
description = "diffusion example"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["one", "two"]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "numpy",
    "matplotlib",
    'importlib-metadata; python_version<"3.10"',
]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
diffusion2d-cli = "diffusion2d.diffusion2d.solve"